# programming_language

./: .gitignore  Cargo.toml  README.md  main.txt  shell.nix
.github/workflows/: ci.yml
docs/: Attributes.md  Extern.md  Module.md
linear-tree/: Cargo.toml
linear-tree/src/: builder.rs  compare.rs  into_iter.rs  iterator.rs  lib.rs  macro_builder.rs
linear-tree/tests/: test.rs
linear_tree/: Cargo.toml
linear_tree/src/: builder.rs  construct.rs  into_iter.rs  iterator.rs  lib.rs
linear_tree/tests/: test.rs
pr-ast/: Cargo.toml
pr-ast-linked/: Cargo.toml
pr-ast-linked/src/: context_window.rs  dependency_resolver.rs  error.rs  lib.rs  linked_statement.rs  object.rs  parse_available_names.rs  parse_declaration_types.rs  parse_imports.rs  parse_types.rs  parser_linked_statement.rs
pr-ast-linked/tests/: test_linking.rs
pr-ast/src/: error.rs  lib.rs  parse_attributes.rs  parse_expression.rs  parse_extern.rs  parse_function.rs  parse_import.rs  parse_struct.rs  parse_type.rs  parser_statements.rs  statement.rs
pr-ast/tests/: test_syntactic.rs
pr-common/: Cargo.toml  build.rs
pr-common/src/: bracket_type.rs  error.rs  lib.rs  operations.rs  ranged_tree.rs  target.rs
pr-compiler/: Cargo.toml
pr-compiler/src/: error.rs  io_error.rs  lib.rs  main.rs
pr-compiler/src/compiling/: context_window.rs  error.rs  mod.rs  module_generator.rs
pr-compiler/tests/compile_tests/: common.rs  extern.rs  primitive_tests.rs  syntactic_tests.rs
pr-core/: Cargo.toml
pr-core/src/: error.rs  lib.rs  main.rs  ranged.rs
pr-lexer/: Cargo.toml
pr-lsp/: Cargo.toml
pr-lsp/src/: debug_diagnostics.rs  lib.rs  main.rs
pr-tokenize/: Cargo.toml
src/: error.rs  file_span.rs  io_error.rs  lib.rs  main.rs  module_tree.rs  parser.rs
tests/: test_brackets.rs  test_compiling.rs  test_linking.rs  test_syntactic.rs  test_tokenize.rs  tests.rs
(+91 files in other folders)
