[package]
name = "pr-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
pr-common = { path = "../pr-common" }
pr-lexer = { path = "../pr-lexer" }
pr-ast = { path = "../pr-ast" }
pr-ast-linked = { path = "../pr-ast-linked" }

inkwell = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }
lsp-types = { workspace = true }
