[package]
name = "pr-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
pr-common = { path = "../pr-common" }
pr-lexer = { path = "../pr-lexer" }
pr-ast = { path = "../pr-ast" }
pr-ast-linked = { path = "../pr-ast-linked" }

tokio = { workspace = true }
tower-lsp = { workspace = true }

[features]
debug-tokens = []
debug-statements = []
